doc: update README

--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,26 @@ Every time you run `golem::run_dev()`, the `signature.scss` file is compiled int
 
 The redirection banner is a JavaScript function that redirects the user to the specified URL.
 
-To modify the redirection URL, edit the `index.html` file at the root of the project.
+To modify the redirection URL, creeate a `index.html` file at the root of the project.
+
+See : [signature](https://github.com/ThinkR-open/signature/)
+
+## Deployment
+
+This application is deployed on Connect. 
+
+But also serverless directly with ShinyLive : 
+
+```{r eval=FALSE}
+shinylive::export(".", "site")
+httpuv::runStaticServer("site/")
+```
+
+or with Github Actions. [More details here](https://posit-dev.github.io/r-shinylive/#github-pages)  : 
+
+```{r eval=FALSE}
+usethis::use_github_action(url = "https://github.com/posit-dev/r-shinylive/blob/actions-v1/examples/deploy-app.yaml")
+```
 
 ## You love this project?
 
