chore: add Playwright test badge to README files

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/ThinkR-open/signature.r/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ThinkR-open/signature.r/actions/workflows/R-CMD-check.yaml)
+[![Playwright Tests](https://github.com/ThinkR-open/signature.r/actions/workflows/playwright.yaml/badge.svg)](https://github.com/ThinkR-open/signature.r/actions/workflows/playwright.yaml)
 <!-- badges: end -->
 
 This is the R version of the [`{signature.py}`](https://github.com/ThinkR-open/signature.py) and [`{signature.js}`](https://github.com/ThinkR-open/signature.js) application.
